projects management page
Included projects management page

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                                     <div class="icon-wrapper">
                                         <i class="ion-ios-people-outline"></i>
                                     </div>
-                                    <h4>Coordenação de projetos</h4>
-                                    Arranjar um texto sobre coordenação de projectos.
+                                    <h4>
+                                        <a href="projects-management.html">Coordenação de projetos</a></h4>
                                 </div>
 
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -111,7 +111,6 @@
                                         <i class="ion-ios-pulse-strong"></i>
                                     </div>
                                     <h4>Manutenção e construção de edifícios</h4>
-                                    Arranjar um texto sobre manutenção e construção de edifícios.
                                 </div>
 
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
