commented woodwork description
commented woodwork description

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                         <i class="ion-settings"></i>
                                     </div>
                                     <h4>Carpintaria</h4>
-                                    Dispômos de recursos e instalações próprios na área de Carpintaria, executando e instalando todos os componentes associados, portas, janelas, pavimentos, mobiliario, cozinhas, entre outros.
+                                    <!--Dispômos de recursos e instalações próprios na área de Carpintaria, executando e instalando todos os componentes associados, portas, janelas, pavimentos, mobiliario, cozinhas, entre outros.-->
                                 </div>
                             </div>
                         </div>
