project management short description

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                                         <i class="ion-ios-people-outline"></i>
                                     </div>
                                     <h4>
-                                        <a href="projects-management.html">Coordenação de projetos</a></h4>
+                                        <a href="projects-management.html" title="Ver descrição completa">Coordenação de projetos</a>
+                                    </h4>
+                                    Prestamos serviços de direcção e coordenação de projetos com vista  a assegurar a verificação da execução da obra em conformidade com o projecto [<a href="projects-management.html" title="Ver descrição completa">...</a>]
                                 </div>
 
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
