short presentation description fixed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                           <h1>KWCM Unipessoal, Lda</h1>
                           <h4>
                             A nossa actividade principal centra-se na empreitada geral de CONSTRUÇÃO CIVIL e tem como objetivo social a coordenação de projetos, manutenção e construção de edifícios.
-                            Complementarmente, possui recursos e instalações próprias na area de carpintaria, executando e instalando todos os componentes associados, portas, janelas, pavimentos, mobiliario e cozinhas.
+                            Complementarmente, possuimos recursos e instalações próprias na área de carpintaria, executando e instalando todos os componentes associados, portas, janelas, pavimentos, mobiliario e cozinhas.
                           </h4>
                         <a href="who-we-are.html" class="btn btn-custom btn-two">SABER MAIS</a>
                         <a href="#contact" class="btn btn-custom btn-one">CONTACTOS</a>
